fix: AVPs must carry vendor ID if vendor specific
Co-authored-by: AI Coding Agent <ai@invalid.invalid>